# Apache-like

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  conanfile.txt  cool_features.txt
lib/libmy_parsers/: CMakeLists.txt  ParserJsonWrapper.cpp  ParserJsonWrapper.hpp
lib/libmy_parsers/tests/: CMakeLists.txt  Test_ParserJsonWrapper.cpp
lib/openZia/docs/html/: _context_8hpp.html  classo_z_1_1o_z_1_1_h_t_t_p_1_1_header.html  namespacemembers_enum.html
lib/openZia/openZia/: BaseHTTP.hpp  ByteArray.hpp  Context.cpp  Context.hpp  DynamicLoader.hpp  EntryPoint.hpp  MessageHTTP.hpp  Pipeline.cpp  Pipeline.ipp  openZia.cmake
lib/uti/my_network/: CMakeLists.txt
lib/uti/my_network/Async/: IClientTcpAsyncWrapper.hpp  IServerTcpAsyncWrapper.hpp  ServerTcpAsyncWrapper.cpp  ServerTcpAsyncWrapper.hpp
lib/uti/my_network/BlockingMultiThread/Client/: ClientUdpMultiThreadWrapper.cpp  ClientUdpMultiThreadWrapper.hpp  IClientUdpMultiThreadWrapper.hpp
lib/uti/my_network/BlockingMultiThread/Server/: IServerUdpMultiThreadWrapper.hpp  ServerUdpMultiThreadWrapper.cpp  ServerUdpMultiThreadWrapper.hpp
lib/uti/my_network/BlockingMultiThread/Server/TCP/: ServerTcpMultiThreadWrapper.hpp
lib/uti/my_network/BlockingMultiThread/Server/UDP/: ServerUdpMultiThreadWrapper.hpp
lib/uti/my_network/tests/: CMakeLists.txt
lib/uti/my_prog_args/: MyProgArgs.hpp
lib/uti/my_string/: MyStrTok.hpp
srcs/: CMakeLists.txt  ProtocolDataPacket.hpp  ProtocolHandler.cpp  ProtocolHandler.hpp  Server.cpp  Server.hpp  main.cpp
srcs/modules/: CMakeLists.txt  HTTP.cpp  HTTP.hpp  Hello.cpp  Hello.hpp  SSL.cpp  SSL.hpp  World.cpp  World.hpp  key.pem  mycert.pem
srcs/www/: index.html
tmp/: csr.pem  key.pem
tmp/valid_10days/: cert.pem
